2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use the new version numbering mechanism for scripts.

	* tools/bin/cce.in,
	* tools/bin/slc.in,
	* tools/bin/slr.in,
	* tools/bin/slt-many.in,
	* tools/bin/slt.in: Use `$slc_version' only, remove references to
	`$slrev' and `$rev' since this is now embedded in `$slc_version'.

	* tools/bin/Makefile.am: Make scripts and man pages depend on
	`$(top_srcdir)/.version' so they are regenerated on version bumps.

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce automatic version numbering.

	* build-aux/version-gen: New. Inspired from `git-version-gen', but
	privileging SVN revision numbers over git commit hashes.
	
	* build-aux/package-version: Set to 2.1.

	* configure.ac,
	* Makefile.am: Update to use `build-aux/version-gen'.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fixes (allow `make distcheck').
	
	* lib/mtalpha.mk (CLEANFILES): Clean all built objects.
	
	* tools/lib/Makefile.am (CLEANFILES): Clean generated scripts.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to quiet compiler warnings.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Avoid multi-line
	`//'-style comments. (reported by C. Joslin)

	* lib/include/cstddef.h: Do not define `NULL' if it is already
	defined (requested by C. Joslin).

	* lib/src/gfx.c: Use proper `printf' format modifiers.

	* lib/src/mtclock.c: Define `shutup_ctime_h' to avoid warnings in
	`ctime.h'.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New default MT profile that provides multiple places.

	This is required by `make check' in the `programs' package since
	the `mandel' benchmark requires at least two 1-core places.
	
	* tools/lib/mt-profiles/rmb8: New.
	* tools/lib/mt-profiles/default: Alias `rmb8'.

	* tools/lib/Makefile.am: Update accordingly.
	
2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase portability of the run script in execution packages.
